<resources>
    <string name="app_name">Secrecheat</string>
    <string name="str_username">Digite seu nome de usuário</string>
    <string name="str_hint_countrycode">+55</string>
    <string name="str_hint_ddd">99</string>
    <string name="str_hint_phonenumber">999999999</string>
    <string name="str_btn_signup">Cadastrar</string>
    <string name="str_validation">Validação</string>
    <string name="step_two_text_str">Crie um usuário único para se identificar com outros usuário, ou não!</string>
    <string name="username_view_str">Usuário:</string>
    <string name="signup_btn_str">Cadastrar!</string>
    <string name="item_settings">Configurações</string>
    <string name="item_logout">Sair</string>
    <string name="item_search">Pesquisar</string>
    <string name="item_add_person">Adicionar novo contato</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
