<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item_settings"
        android:title="@string/item_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_logout"
        android:title="@string/item_logout"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_search"
        android:title="@string/item_search"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_search"
        />
    <item
        android:id="@+id/item_add_person"
        android:title="@string/item_add_person"
        app:showAsAction="ifRoom"
        android:orderInCategory="400"
        android:icon="@drawable/ic_person_add"
        />
</menu>